Fix spacing of footer icons

--- a/style.css
+++ b/style.css
@@ -133,13 +133,16 @@ main {
 /* Footer Styles */
 footer {
     background-color: sandybrown;
-    /* flex-direction: column; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 footer ul {
-    display: flex;
     width: 90vw;
+    display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    font-size: 150%;
 }
